# financial-documents-processing

./: .gitignore  CLAUDE.md  README.md  cdk.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/rules/: backend-lambda.md  compliance-engine.md  core-conventions.md  frontend-react.md  plugin-architecture.md  testing-toolkit.md  testing.md
docs/: ARCHITECTURE.md  CREDITS.md  Financial-Documents-Processing-Router-Pattern.pptx  VERSION_HISTORY.md  stepfunctions_graph.dot
docs/brainstorms/: 2026-02-17-financial-document-processing-plugin-architecture-brainstorm.md
docs/plans/: 2026-02-17-refactor-plugin-architecture-financial-document-processing-plan.md  2026-02-24-dual-engine-content-aware-extraction-design.md  2026-02-25-frontend-ux-redesign-plan.md  2026-02-25-frontend-ux-redesign.md  2026-02-27-pageindex-integration-design.md  2026-03-02-compliance-engine-design.md  2026-03-02-compliance-engine-plan.md  2026-03-05-testing-toolkit-design.md  2026-03-05-testing-toolkit-plan.md  2026-03-09-architecture-diagrams-design.md  2026-03-09-architecture-diagrams-plan.md  2026-03-09-pageindex-unification-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
lambda/api/: handler.py
lambda/compliance-api/: handler.py
lambda/compliance-ingest/: handler.py  (+3 more)
presentation/: create-presentation.js
scripts/: cleanup.sh  common.sh  decrypt-for-rollback.py  deploy-backend.sh  deploy-frontend.sh  deploy.sh  encrypt-existing-pii.py  generate-architecture-diagram-horizontal.py  generate-architecture-diagram.py  generate-sample-bsa.py  generate-stepfunctions-diagram.py  generate-test-invoice.py  setup-dev.sh  test-compliance-e2e.sh  test-local.sh  test-toolkit.sh  test.sh  upload-test-doc.sh
tests/: __init__.py  test_api_baselines.py  test_api_compliance_reports.py  test_compliance_evaluate.py  test_compliance_extractor.py  test_compliance_feedback.py  test_compliance_parser.py  test_config.py  test_models.py  test_plugin_registry.py
(+128 files in other folders)
